--- a/apps/main/src/app/news/news.component.html
+++ b/apps/main/src/app/news/news.component.html
@@ -12,12 +12,13 @@
           <input #searchbox matInput type="search" placeholder="search here" class="search-input">
         </mat-form-field>
         <mat-list>
-          <mat-list-item *ngFor="let item of news$ | async; trackBy: trackProject" (click)="selected.emit(item)"
+          <mat-list-item *ngFor="let item of news$ | async; trackBy: trackProject" (click)="openCurrentNews(item)"
             class="record">
             <h3 mat-line>{{item.webTitle}}</h3>
             <p mat-line>
-              {{item.webTitle}}
+              {{item.sectionName}}
             </p>
+            <mat-icon>arrow_right_alt</mat-icon>
             <!-- <h6>{{item.webPublicationDate | date:'medium'}}</h6> -->
           </mat-list-item>
         </mat-list>
