--- a/apps/main/src/app/news/news.component.html
+++ b/apps/main/src/app/news/news.component.html
@@ -14,14 +14,22 @@
         <mat-list>
           <mat-list-item *ngFor="let item of news$ | async; trackBy: trackProject" (click)="openCurrentNews(item)"
             class="record">
-            <h3 mat-line>{{item.webTitle}}</h3>
             <p mat-line>
-              {{item.sectionName}}
+              <u>
+                {{item.sectionName}}
+              </u>
+            </p>
+            <h3 mat-line> {{item.webTitle}}</h3>
+            <p mat-line>
+              {{item.webPublicationDate | date:'short'}}
             </p>
             <mat-icon>arrow_right_alt</mat-icon>
             <!-- <h6>{{item.webPublicationDate | date:'medium'}}</h6> -->
           </mat-list-item>
         </mat-list>
+
+        <button mat-stroked-button (click)="loadNextPage()">Load More</button>
+
       </mat-card-content>
     </mat-card>
 
