--- a/apps/main/src/app/app.component.html
+++ b/apps/main/src/app/app.component.html
@@ -1,10 +1,9 @@
-<ui-toolbar [title]="title" [sidenav]="sidenav" (logout)="logout($event)"></ui-toolbar>
+<ui-toolbar [title]="title" [sidenav]="sidenav"></ui-toolbar>
 
 <mat-sidenav-container>
   <mat-sidenav [opened]="isSidenaveOpen(sidenav)" #sidenav mode="side" class="app-sidenav">
     <nav>
-      <a mat-button class="nav-link" *ngFor="let link of links"
-        [routerLink]="link.path" routerLinkActive="active">
+      <a mat-button class="nav-link" *ngFor="let link of links" [routerLink]="link.path" routerLinkActive="active">
         <mat-icon>{{link.icon}}</mat-icon>
         {{link.label}}
       </a>
