--- a/apps/main/src/styles.scss
+++ b/apps/main/src/styles.scss
@@ -206,6 +206,7 @@ mat-card-actions {
     align-items: center;
     padding-top: 5px;
     padding-bottom: 5px;
+    font-size: 17px;
 }
 
 // UI TOOLBAR
