--- a/apps/main/src/app/news/news.component.html
+++ b/apps/main/src/app/news/news.component.html
@@ -12,8 +12,7 @@
           <input #searchbox matInput type="search" placeholder="search here" class="search-input">
         </mat-form-field>
         <mat-list>
-          <mat-list-item *ngFor="let item of news$ | async" (click)="openCurrentNews(item)"
-            class="record">
+          <mat-list-item *ngFor="let item of news$ | async" (click)="openCurrentNews(item)" class="record">
             <p mat-line>
               <u>
                 {{item.sectionName}}
